[tool.poetry]
name = "when2meet"
version = "0.1.0"
description = ""
authors = ["kyukyu300 kyujin1252@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
orjson = "3.10.12"
tortoise-orm = {version = "0.23.0", extras = ["asyncmy"]}
cryptography = "44.0.0"
aerich = "0.8.1"
tomlkit = "0.13.2"
pydantic-settings = "2.7.1"

[tool.poetry.group.dev.dependencies]
black = "24.10.0"
ruff = "0.8.2"
mypy = "1.13.0"
coverage = "7.6.9"
pytest-asyncio = "0.25.0"

[tool.black]
line-length = 120

[tool.mypy]
plugins = ["pydantic.mypy"]
python_version = 3.13
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"